# rust-web-server-template

./: Cargo.toml  diesel.toml  readme.md
src/: db.rs  lib.rs  main.rs
src/handlers/: health.rs  user.rs
src/models/: user.rs
src/routes/: health.rs  mod.rs  user.rs
