[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "regex"] }
syn = "2.0"

[dependencies.regex]
version = "1"
features = ["unicode-case"]